src/boringssl_sys/boringssl.rs


    // ── PBKDF2 ───────────────────────────────────────────────────────────
    pub fn PKCS5_PBKDF2_HMAC(
        password: *const u8,
        password_len: usize,
        salt: *const u8,
        salt_len: usize,
        iterations: c_uint,
        digest: *const EVP_MD,
        key_len: usize,
        out_key: *mut u8,
    ) -> c_int;

    // ── HKDF ────────────────────────────────────────────────────────────
    pub fn HKDF(
        out_key: *mut u8,
        out_len: usize,
        digest: *const EVP_MD,
        salt: *const u8,
        salt_len: usize,
        ikm: *const u8,
        ikm_len: usize,
        info: *const u8,
        info_len: usize,
    ) -> c_int;
    pub fn HKDF_expand(
        out_key: *mut u8,
        out_len: usize,
        prk: *const u8,
        prk_len: usize,
        info: *const u8,
        info_len: usize,
    ) -> c_int;

    // ── RSA / PEM ────────────────────────────────────────────────────────
    pub fn RSA_free(rsa: *mut RSA);
    pub fn RSA_size(rsa: *const RSA) -> c_uint;
    pub fn RSA_public_encrypt(
        flen: usize,
        from: *const u8,
        to: *mut u8,
        rsa: *mut RSA,
        padding: c_int,
    ) -> c_int;
    pub fn PEM_read_bio_RSA_PUBKEY(
        bp: *mut BIO,
        x: *mut *mut RSA,
        cb: Option<pem_password_cb>,
        u: *mut c_void,
    ) -> *mut RSA;

    // ── X509 certificate / private key loading ──────────────────────────────

    /// Parse a PEM-encoded X509 certificate from a BIO.
    pub fn PEM_read_bio_X509(
        bp: *mut BIO,
        x: *mut *mut X509,
        cb: Option<pem_password_cb>,
        u: *mut c_void,
    ) -> *mut X509;

    /// Parse a PEM-encoded private key from a BIO.
    pub fn PEM_read_bio_PrivateKey(
        bp: *mut BIO,
        x: *mut *mut EVP_PKEY,
        cb: Option<pem_password_cb>,
        u: *mut c_void,
    ) -> *mut EVP_PKEY;
    pub fn PEM_read_bio_PUBKEY(
        bp: *mut BIO,
        x: *mut *mut EVP_PKEY,
        cb: Option<pem_password_cb>,
        u: *mut c_void,
    ) -> *mut EVP_PKEY;

    /// Free an EVP_PKEY private key.
    pub fn EVP_PKEY_free(pkey: *mut EVP_PKEY);

    /// Set the leaf certificate for an SSL_CTX.
    pub fn SSL_CTX_use_certificate(ctx: *mut SSL_CTX, x509: *mut X509) -> c_int;

    /// Set the private key for an SSL_CTX.
    pub fn SSL_CTX_use_PrivateKey(ctx: *mut SSL_CTX, pkey: *mut EVP_PKEY) -> c_int;

    /// Add an additional certificate to SSL_CTX's chain.
    pub fn SSL_CTX_add1_chain_cert(ctx: *mut SSL_CTX, x509: *mut X509) -> c_int;

    /// Load a certificate from DER-encoded ASN1 data.
    pub fn SSL_CTX_use_certificate_ASN1(ctx: *mut SSL_CTX, der_len: usize, der: *const u8) -> c_int;

    /// Load a private key from DER-encoded ASN1 data.
    pub fn SSL_CTX_use_PrivateKey_ASN1(pk: c_int, ctx: *mut SSL_CTX, der: *const u8, der_len: c_long) -> c_int;

    // ── EVP_AEAD (AEAD encryption) ───────────────────────────────────────
    pub safe fn EVP_aead_aes_128_gcm() -> *const EVP_AEAD;
    pub safe fn EVP_aead_aes_256_gcm() -> *const EVP_AEAD;
    pub safe fn EVP_aead_chacha20_poly1305() -> *const EVP_AEAD;
    pub fn EVP_AEAD_key_length(aead: *const EVP_AEAD) -> usize;
    pub fn EVP_AEAD_nonce_length(aead: *const EVP_AEAD) -> usize;
    pub fn EVP_AEAD_max_overhead(aead: *const EVP_AEAD) -> usize;
    pub fn EVP_AEAD_CTX_init(
        ctx: *mut EVP_AEAD_CTX,
        aead: *const EVP_AEAD,
        key: *const u8,
        key_len: usize,
        tag_len: usize,
        engine: *mut ENGINE,
    ) -> c_int;
    pub fn EVP_AEAD_CTX_seal(
        ctx: *const EVP_AEAD_CTX,
        out: *mut u8,
        out_len: *mut usize,
        max_out: usize,
        nonce: *const u8,
        nonce_len: usize,
        in_: *const u8,
        in_len: usize,
        ad: *const u8,
        ad_len: usize,
    ) -> c_int;
    pub fn EVP_AEAD_CTX_open(
        ctx: *mut EVP_AEAD_CTX,
        out: *mut u8,
        out_len: *mut usize,
        max_out: usize,
        nonce: *const u8,
        nonce_len: usize,
        in_: *const u8,
        in_len: usize,
        ad: *const u8,
        ad_len: usize,
    ) -> c_int;
    pub fn EVP_AEAD_CTX_cleanup(ctx: *mut EVP_AEAD_CTX);

    // ── EVP_DigestSign/Verify ────────────────────────────────────────────
    pub fn EVP_DigestSignInit(
        ctx: *mut EVP_MD_CTX,
        pctx: *mut *mut EVP_PKEY_CTX,
        md: *const EVP_MD,
        e: *mut ENGINE,
        pkey: *mut EVP_PKEY,
    ) -> c_int;
    pub fn EVP_DigestSignUpdate(ctx: *mut EVP_MD_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn EVP_DigestSignFinal(ctx: *mut EVP_MD_CTX, sig: *mut u8, sig_len: *mut usize) -> c_int;
    pub fn EVP_DigestVerifyInit(
        ctx: *mut EVP_MD_CTX,
        pctx: *mut *mut EVP_PKEY_CTX,
        md: *const EVP_MD,
        e: *mut ENGINE,
        pkey: *mut EVP_PKEY,
    ) -> c_int;
    pub fn EVP_DigestVerifyUpdate(ctx: *mut EVP_MD_CTX, data: *const c_void, len: usize) -> c_int;
    pub fn EVP_DigestVerifyFinal(ctx: *mut EVP_MD_CTX, sig: *const u8, sig_len: usize) -> c_int;

    // ── EVP_PKEY key generation ──────────────────────────────────────────
    pub fn EVP_PKEY_new() -> *mut EVP_PKEY;
    pub fn EVP_PKEY_id(pkey: *const EVP_PKEY) -> c_int;
    pub fn EVP_PKEY_CTX_new(pkey: *mut EVP_PKEY, e: *mut ENGINE) -> *mut EVP_PKEY_CTX;
    pub fn EVP_PKEY_CTX_new_id(id: c_int) -> *mut EVP_PKEY_CTX;
    pub fn EVP_PKEY_CTX_free(ctx: *mut EVP_PKEY_CTX);
    pub fn EVP_PKEY_keygen_init(ctx: *mut EVP_PKEY_CTX) -> c_int;
    pub fn EVP_PKEY_keygen(ctx: *mut EVP_PKEY_CTX, pkey: *mut *mut EVP_PKEY) -> c_int;
    pub fn EVP_PKEY_CTX_ctrl(
        ctx: *mut EVP_PKEY_CTX,
        keytype: c_int,
        optype: c_int,
        cmd: c_int,
        p1: c_int,
        p2: *mut c_void,
    ) -> c_int;
    pub fn EVP_PKEY_CTX_set_signature_md(ctx: *mut EVP_PKEY_CTX, md: *const EVP_MD) -> c_int;
    pub fn EVP_PKEY_CTX_set_rsa_padding(ctx: *mut EVP_PKEY_CTX, padding: c_int) -> c_int;
    pub fn EVP_PKEY_CTX_set_rsa_pss_saltlen(ctx: *mut EVP_PKEY_CTX, saltlen: c_int) -> c_int;
    pub fn EVP_PKEY_CTX_set_ec_paramgen_curve_nid(ctx: *mut EVP_PKEY_CTX, nid: c_int) -> c_int;

    // ── EVP_PKEY key derivation (X25519/ECDH) ────────────────────────────
    pub fn EVP_PKEY_derive_init(ctx: *mut EVP_PKEY_CTX) -> c_int;
    pub fn EVP_PKEY_derive_set_peer(ctx: *mut EVP_PKEY_CTX, peer: *mut EVP_PKEY) -> c_int;
    pub fn EVP_PKEY_derive(ctx: *mut EVP_PKEY_CTX, key: *mut u8, keylen: *mut usize) -> c_int;

    // ── RSA key generation ───────────────────────────────────────────────
    pub fn RSA_new() -> *mut RSA;
    pub fn RSA_generate_key_ex(rsa: *mut RSA, bits: c_int, e: *mut BIGNUM, cb: *mut BN_GENCB) -> c_int;
    pub fn EVP_PKEY_set1_RSA(pkey: *mut EVP_PKEY, rsa: *mut RSA) -> c_int;
    pub fn EVP_PKEY_get0_RSA(pkey: *const EVP_PKEY) -> *mut RSA;

    // ── BIGNUM ───────────────────────────────────────────────────────────
    pub fn BN_new() -> *mut BIGNUM;
    pub fn BN_free(bn: *mut BIGNUM);
    pub fn BN_set_word(bn: *mut BIGNUM, w: c_ulong) -> c_int;
    pub fn BN_num_bits(bn: *const BIGNUM) -> c_int;
    pub fn BN_bn2bin(bn: *const BIGNUM, out: *mut u8) -> c_int;
    pub fn BN_bin2bn(s: *const u8, len: usize, bn: *mut BIGNUM) -> *mut BIGNUM;

    // ── BN_CTX ───────────────────────────────────────────────────────────
    pub fn BN_CTX_new() -> *mut BN_CTX;
    pub fn BN_CTX_free(ctx: *mut BN_CTX);

    // ── EC_POINT ─────────────────────────────────────────────────────────
    pub fn EC_POINT_new(group: *const EC_GROUP) -> *mut EC_POINT;
    pub fn EC_POINT_free(point: *mut EC_POINT);
    pub fn EC_POINT_point2oct(
        group: *const EC_GROUP,
        point: *const EC_POINT,
        form: point_conversion_form_t,
        buf: *mut u8,
        len: usize,
        ctx: *mut BN_CTX,
    ) -> usize;
    pub fn EC_POINT_oct2point(
        group: *const EC_GROUP,
        point: *mut EC_POINT,
        buf: *const u8,
        len: usize,
        ctx: *mut BN_CTX,
    ) -> c_int;

    // ── ECDH ─────────────────────────────────────────────────────────────
    pub fn ECDH_compute_key(
        out: *mut c_void,
        outlen: usize,
        pub_key: *const EC_POINT,
        eckey: *mut EC_KEY,
        kdf: Option<unsafe extern "C" fn(*const c_void, usize, *mut c_void) -> c_int>,
    ) -> c_int;

    // ── EC_KEY ───────────────────────────────────────────────────────────
    pub fn EC_KEY_new_by_curve_name(nid: c_int) -> *mut EC_KEY;
    pub fn EC_KEY_free(key: *mut EC_KEY);
    pub fn EC_KEY_generate_key(key: *mut EC_KEY) -> c_int;
    pub fn EC_KEY_get0_group(key: *const EC_KEY) -> *const EC_GROUP;
    pub fn EC_KEY_get0_private_key(key: *const EC_KEY) -> *const BIGNUM;
    pub fn EC_KEY_get0_public_key(key: *const EC_KEY) -> *const EC_POINT;
    pub fn EC_KEY_set_private_key(key: *mut EC_KEY, priv_key: *const BIGNUM) -> c_int;
    pub fn EC_KEY_set_public_key(key: *mut EC_KEY, pub_key: *const EC_POINT) -> c_int;
    pub fn EVP_PKEY_set1_EC_KEY(pkey: *mut EVP_PKEY, key: *mut EC_KEY) -> c_int;
    pub fn EVP_PKEY_get0_EC_KEY(pkey: *const EVP_PKEY) -> *const EC_KEY;

    // ── EC_POINT arithmetic ──────────────────────────────────────────────
    pub fn EC_POINT_mul(
        group: *const EC_GROUP,
        r: *mut EC_POINT,
        n: *const BIGNUM,
        p: *const EC_POINT,
        m: *const BIGNUM,
        ctx: *mut BN_CTX,
    ) -> c_int;

    // ── Key serialization ────────────────────────────────────────────────
    pub fn i2d_PrivateKey(pkey: *const EVP_PKEY, out: *mut *mut u8) -> c_int;
    pub fn i2d_PUBKEY(pkey: *const EVP_PKEY, out: *mut *mut u8) -> c_int;
    pub fn d2i_AutoPrivateKey(out: *mut *mut EVP_PKEY, inp: *mut *const u8, len: c_long) -> *mut EVP_PKEY;
    pub fn d2i_PUBKEY(out: *mut *mut EVP_PKEY, inp: *mut *const u8, len: c_long) -> *mut EVP_PKEY;
    pub fn PEM_write_bio_PKCS8PrivateKey(
        bio: *mut BIO,
        pkey: *mut EVP_PKEY,
        enc: *const EVP_CIPHER,
        kstr: *mut c_char,
        klen: c_int,
        cb: Option<pem_password_cb>,
        u: *mut c_void,
    ) -> c_int;
    pub fn PEM_write_bio_PUBKEY(bio: *mut BIO, pkey: *const EVP_PKEY) -> c_int;

    // ── RAND ─────────────────────────────────────────────────────────────
    pub fn RAND_bytes(buf: *mut u8, len: usize) -> c_int;

    // ── Ed25519 low-level API ────────────────────────────────────────────
    pub fn ED25519_keypair(out_public_key: *mut u8, out_private_key: *mut u8);
    pub fn ED25519_keypair_from_seed(
        out_public_key: *mut u8,
        out_private_key: *mut u8,
        seed: *const u8,
    );
    pub fn ED25519_sign(
        out_sig: *mut u8,
        message: *const u8,
        message_len: usize,
        private_key: *const u8,
    ) -> c_int;
    pub fn ED25519_verify(
        message: *const u8,
        message_len: usize,
        signature: *const u8,
        public_key: *const u8,
    ) -> c_int;

    // ── EVP_PKEY raw key API ────────────────────────────────────────────
    pub fn EVP_pkey_ed25519() -> *const c_void;
    pub fn EVP_pkey_x25519() -> *const c_void;
    pub fn EVP_PKEY_from_raw_private_key(
        alg: *const c_void,
        in_: *const u8,
        in_len: usize,
    ) -> *mut EVP_PKEY;
    pub fn EVP_PKEY_from_raw_public_key(
        alg: *const c_void,
        in_: *const u8,
        in_len: usize,
    ) -> *mut EVP_PKEY;
    pub fn EVP_PKEY_get_raw_private_key(
        pkey: *const EVP_PKEY,
        out: *mut u8,
        out_len: *mut usize,
    ) -> c_int;
    pub fn EVP_PKEY_get_raw_public_key(
        pkey: *const EVP_PKEY,
        out: *mut u8,
        out_len: *mut usize,
    ) -> c_int;
